--- a/style2.css
+++ b/style2.css
@@ -8,7 +8,7 @@ nav{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	height: 75px;
+	height: 145px;
 	align-items: center;
 }
 .menu{
@@ -98,4 +98,66 @@ nav{
 		padding: 10px;
 		transition: height 1s;
 	}
+	
 }
+.mainsbackgroundpicture{
+	background-image: url("img/winterspring.jpg");
+	background-size: cover;
+	width: 100%;
+	height: 100vh;
+		position: relative;
+	display: flex;
+	background-position: center;
+	align-items: center;
+	align-content: center;
+}
+h1 {
+font-family: "ff-brokenscript-web", serif;
+font-weight: 700;
+font-style: normal;
+color: white;
+text-align: center;
+position: absolute;
+left: 40%;
+top: 45px;
+}
+
+h2 {
+font-family: "ff-brokenscript-web", serif;
+font-weight: 700;
+font-style: normal;
+color: white;
+text-align: center;
+position: absolute;
+left: 30%;
+top: 70px;
+}
+.descriptiontext{
+	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
+	color: white;
+	background: none;
+	text-align: center;
+	justify-content: center;
+ 	font-size: 23px;
+	font-weight: bolder;
+	max-width: 700px;
+	position: absolute;
+	left: 25%;
+	
+}
+
+@media screen and (max-width: 700px) {
+    .mainsbackgroundpicture {
+        height: 100vh;
+    }
+	.descriptiontext{
+		font-size: 20px;
+		max-width: 600px;
+		text-align: center;
+		position: absolute;
+		display: flex;
+	}
+}
+
+		
+	
